fixed unclickable link on mobile due to link shifting line

--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -35,7 +35,6 @@ a{
   color: #B482FF;
 }
 a:hover{
-  font-weight: bold;
   text-decoration: none;
 }
 a h1{
@@ -341,4 +340,7 @@ ol li::before{
   .desknav a:hover{
     color: #B482FF;
   }
+
+  a:hover{
+  font-weight: bold;}
 }
